增加SLB 的搜索功能
